--- a/package.xml
+++ b/package.xml
@@ -3,16 +3,30 @@
 <package format="3">
   <name>locomotion_mode</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="miro.voellmy@esa.int">freki</maintainer>
+  <description>Package contains base class which provides interfaces to the rover pipeline.</description>
+  <maintainer email="miro.voellmy@esa.int">Miro Voellmy</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+
+  <depend>geometry_msgs</depend>
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>rclcpp</depend>
+  <depend>builtin_interfaces</depend>
+  <depend>urdf</depend>
+  <depend>rover_msgs</depend>
+
+  <exec_depend>rosidl_default_runtime</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
+  <member_of_group>rosidl_interface_packages</member_of_group>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
+
 </package>
