--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,35 +12,34 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(ament_index_cpp REQUIRED)
 find_package(rclcpp REQUIRED)
+
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
-find_package(std_srvs REQUIRED)
-find_package(rosidl_default_generators REQUIRED)
 find_package(geometry_msgs REQUIRED)
-find_package(builtin_interfaces REQUIRED)
-find_package(urdf REQUIRED)
 
+find_package(urdf REQUIRED)
 find_package(rover_msgs REQUIRED)
 
 include_directories(include)
 
-set(dependencies "ament_index_cpp" "geometry_msgs" "rclcpp" "std_msgs" "sensor_msgs" "std_srvs" "urdf" "rover_msgs")
+set(dependencies
+  "std_msgs"
+  "geometry_msgs"
+  "sensor_msgs"
+  "rclcpp"
+  "urdf"
+  "rover_msgs")
 
 # add library
-file(GLOB MY_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/*.cpp)
 add_library(${PROJECT_NAME} STATIC src/locomotion_mode.cpp)
 
 # specify include paths and dependencies
+ament_target_dependencies(${PROJECT_NAME} ${dependencies})
 target_include_directories(${PROJECT_NAME}
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>)
-
-# Why are they private in the platform driver?
-
-ament_target_dependencies(${PROJECT_NAME} ${dependencies})
 
 # copy public headers to destination
 install(
