--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 
 find_package(std_msgs REQUIRED)
+find_package(std_srvs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 
@@ -25,6 +26,7 @@ include_directories(include)
 
 set(dependencies
   "std_msgs"
+  "std_srvs"
   "geometry_msgs"
   "sensor_msgs"
   "rclcpp"
