First implementation of rover parser working
Updated CMakeList to include new .cpp file
Named Namespace explicitely different then classs for clarification

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,10 @@ set(dependencies
   "rover_msgs")
 
 # add library
-add_library(${PROJECT_NAME} STATIC src/locomotion_mode.cpp)
+# add_library(${PROJECT_NAME} STATIC src/locomotion_mode.cpp)
+file(GLOB MY_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/*.cpp)
+add_library(${PROJECT_NAME} STATIC ${MY_SOURCES})
+
 
 # specify include paths and dependencies
 ament_target_dependencies(${PROJECT_NAME} ${dependencies})
